# Forex-Scalper-Bot

./: .env  .env.example  ARCHITECTURE.md  BROKER_CONFIGURATION.md  CMakeLists.txt  DEMO_ACCOUNT_SETUP_GUIDE.md  DEPLOYMENT_SPECIFICATIONS.md  Dockerfile  FXCM_MIGRATION_GUIDE.md  GEMINI_MIGRATION.md  HYBRID_ARCHITECTURE_SETUP.md  IMPLEMENTATION_GUIDE.md  INFLUXDB_SETUP_GUIDE.md  MODEL_USAGE_GUIDE.md  MT5_INTEGRATION_GUIDE.md  MT5_SignalSender.mq5  MT5_WINDOWS_SETUP.md  Makefile  PYTHON_AI_SPECIFICATIONS.md  REACT_DASHBOARD_SPECIFICATIONS.md  README.md  TECHNICAL_SPECIFICATIONS.md  WindowsVM_SignalSender.mq5  WindowsVM_SignalSender_Enhanced.mq5  docker-compose.yml  linux_trading_bot.py  requirements.txt  setup.sh  test_influxdb.py  test_mt5_windows.py  test_signal.py
.github/workflows/: ci.yml
config/: mt5_config.json  trading_config.json
cpp/: Dockerfile
cpp/src/brokers/: fxcm_broker.cpp  fxcm_broker.hpp
frontend/: Dockerfile  nginx.conf  nginx.template  package.json
frontend/src/components/: Dashboard.jsx
grafana/dashboards/: dashboard.yml  trading-dashboard.json
grafana/datasources/: influxdb.yml
include/brokers/: broker_interface.h  mt5_broker.h
include/core/: engine.h  types.h
include/utils/: config_manager.h  logger.h  logger_fallback.h
python/: model_tester.py  requirements.txt  test_gemini_integration.py  test_price_predictor.py
python/fxcm_service/: Dockerfile  app.py  fxcm_client.py  requirements.txt  simple_fxcm_client.py  test_fxcm_integration.py
python/mt5_bridge/: Dockerfile  mt5_bridge.py  mt5_client.py  requirements.txt
python/price_predictor/: Dockerfile  app.py  gemini_predictor.py  model_config.py  requirements.txt
python/price_predictor/models/: lstm_model.py
python/sentiment_analyzer/: gemini_sentiment.py
scripts/: setup_demo_accounts.sh  setup_mt5.sh
src/: main.cpp
src/brokers/: broker_factory.cpp  mt5_broker.cpp
src/core/: types.cpp
tests/: CMakeLists.txt  test_mt5_integration.py
tests/performance/: benchmark_order_execution.cpp
tests/unit/: test_main.cpp
tests/unit/core/: test_types.cpp
